# Document-Archival-Management-System

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_remaining_tables_and_seeds.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/export/: citations.py  dublin_core.py  ead3.py
backend/app/llm/: anthropic_adapter.py  base.py  factory.py  ollama_adapter.py  openai_adapter.py
backend/app/models/: __init__.py  arrangement.py  audit_log.py  authority_record.py  authority_relationship.py  base.py  collection_permission.py  csv_import.py  deaccession_log.py  document.py  document_annotation.py  document_authority_link.py  document_file.py  document_location_link.py  document_page.py  document_relationship.py  document_term.py  document_version_group.py  donor_agreement.py  event.py  event_authority_link.py  event_document_link.py  event_location_link.py  exhibition.py  fixity_check.py  institution_description_standard.py  location.py  preservation_event.py  public_page.py  review_queue.py  saved_view.py  sequence.py  storage_scheme.py  system_setting.py  user.py  vocabulary.py  watch_folder.py
backend/app/routers/: auth.py  authority.py  documents.py  events.py  exhibitions.py  health.py  imports.py  locations.py  nodes.py  oai.py  persistent_url.py  preservation.py  public.py  reports.py  review.py  search.py  settings_router.py  users.py  (+1 more)
backend/tests/: conftest.py
(+163 files in other folders)
